# cnn-runtime-cpp

./: CMakeLists.txt  ML Runtime.sln  README.md
Benchmarks/: TensorOpsBench.cpp
Header/: Layers.h  Ops.h  Tensor.h
ML Runtime/: ExecutionGraph.cpp  ExecutionGraph.h  GEMMBench.cpp  ML Runtime.vcxproj  ML Runtime.vcxproj.filters  Main.cpp  Tensor.cpp  Tensor.h
ML Runtime/Benchmarks/: GEMMBench.cpp
SourceFiles/: Layers.cpp  Ops.cpp  Tensor.cpp
Tests/: TestTensor.cpp
Training/: DoodlePredictor.py  Inference.cpp  Testing.cpp  Training.cpp
